--- a/quiz.html
+++ b/quiz.html
@@ -50,13 +50,13 @@
 		
 			<p> 3. Which of the following are real-world examples of Voice Technology.</p>
 			<p><label for = "applesiri"> Apple Siri </label>
-				<input type = "checkbox" id = "applesiri" name = "examples[]" value = "applesiri"></p>
+				<input type = "checkbox" id = "applesiri" name = "q3" value = "applesiri"></p>
 			<p><label for = "amazon"> Amazon Alexa </label>
-				<input type = "checkbox" id = "amazon" name = "examples[]" value = "amazon"></p>
+				<input type = "checkbox" id = "amazon" name = "q3" value = "amazon"></p>
 			<p><label for = "google"> Google Assistant </label>
-				<input type = "checkbox" id = "google" name = "examples[]" value = "google"></p>
+				<input type = "checkbox" id = "google" name = "q3" value = "google"></p>
 			<p><label for = "dragon"> Dragon Professional </label>
-				<input type = "checkbox" id = "dragon" name = "examples[]" value = "dragon"></p>
+				<input type = "checkbox" id = "dragon" name = "q3" value = "dragon"></p>
 		
 			<p><label for = "q4"> 4. Which of these catagories is Voice Technology related to?  </label>
 				<select name="q4" id="q4" required="required">
@@ -66,8 +66,15 @@
 					<option value = "politics"> Politics </option>
 				</select></p>
 				
-			<p><label for = "q5"> Q5: Custom </label><br>
-			<input type = "number" id = "q5" name = "q5" required="required"></p>
+			<p> 5. What are some of the benefits of Web Voice Technology? </p>
+            		<p><label for = "disable"> Useful for those with disabilities </label>
+                		<input type = "checkbox" id = "disable" name = "q5" value = "disable"></p>
+            		<p><label for = "interconnectedness"> Can be connected among other devices for productivity </label>
+                		<input type = "checkbox" id = "interconnectedness" name = "q5" value = "interconnectedness"></p>
+           		 <p><label for = "convenient"> Is very convenient for certain tasks(writing,etc) </label>
+                		<input type = "checkbox" id = "convennient" name = "q5" value = "convenient"></p>
+            		<p><label for = "privacy"> Provides the best privacy, firewall that prevents malicious attack on files  </label>
+                		<input type = "checkbox" id = "privacy" name = "q5" value = "privacy"></p>
 		</fieldset>
 		
 		<p><input type = "submit" value = "Finish Quiz!"></p>
