--- a/quiz.html
+++ b/quiz.html
@@ -71,7 +71,7 @@
                 		<input type = "checkbox" id = "disable" name = "q5" value = "disable"></p>
             		<p><label for = "interconnectedness"> Can be connected among other devices for productivity </label>
                 		<input type = "checkbox" id = "interconnectedness" name = "q5" value = "interconnectedness"></p>
-           		 <p><label for = "convenient"> Is very convenient for certain tasks(writing,etc) </label>
+           		 <p><label for = "convennient"> Is very convenient for certain tasks(writing,etc) </label>
                 		<input type = "checkbox" id = "convennient" name = "q5" value = "convenient"></p>
             		<p><label for = "privacy"> Provides the best privacy, firewall that prevents malicious attack on files  </label>
                 		<input type = "checkbox" id = "privacy" name = "q5" value = "privacy"></p>
