--- a/quiz.html
+++ b/quiz.html
@@ -23,21 +23,21 @@
 			<legend> Please enter your full name and student ID </legend>
 
 			<p><label for = "fname">First:</label>
-			<input type = "text" id = "fname" name = "fname" maxlength = "30" pattern = "[A-Za-z-]{0,30}" required = "required"></p>
+			<input type = "text" id = "fname" name = "fname" maxlength = "30" pattern = "^[a-zA-Z]+$" required = "required"></p>
 
 			<p><label for = "lname">Last:</label>
-			<input type = "text" id = "lname" name = "lname" maxlength = "30" pattern = "[A-Za-z-]{0,30}" required = "required"></p>
+			<input type = "text" id = "lname" name = "lname" maxlength = "30" pattern = "^[a-zA-Z]+$" required = "required"></p>
 
 			<p><label for = "studentid">Student ID:</label>
-			<input type = "text" id = "studentid" name = "studentid" required = "required" size="10" pattern=".{7,10}"></p> 
+			<input type = "text" id = "studentid" name = "studentid" required = "required" size="10" pattern="\d{7,10}"></p> 
 		</fieldset>
 		
 		<fieldset>
 			<legend> Read through our topic page if you haven't already, then answer the following questions. Good Luck! </legend>
-
-			<p><label for = "q1"> 1. What is another name for <strong>Voice Technology</strong>? </label>
-			<input type = "text" id = "q1" name = "q1" required = "required"></p>
-		
+			<hr/>
+			<p><label for = "q1"> 1. What is another name for <strong>Voice Technology</strong>? </label><br/>
+			<input type = "text" id = "q1" name = "q1" required = "required" pattern="^[a-zA-Z]+$" maxlength="30"></p>
+			<hr/>
 			<p> 2. What was the name given to the <em>first software program</em> used in Voice Technology? </p>
 			<p><label for = "q2a"> Alexa </label>
 				<input type = "radio" id = "q2a" name = "q2" value = "alexa" required = "required"></p>
@@ -47,7 +47,7 @@
 				<input type = "radio" id = "q2c" name = "q2" value = "cortana" required = "required"></p>
 			<p><label for = "q2d"> Audrey </label>
 				<input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/></p>
-		
+			<hr/>
 			<p> 3. Which of the following are real-world examples of Voice Technology.</p>
 			<p><label for = "applesiri"> Apple Siri </label>
 				<input type = "checkbox" id = "applesiri" name = "q3" value = "applesiri"></p>
@@ -57,7 +57,7 @@
 				<input type = "checkbox" id = "google" name = "q3" value = "google"></p>
 			<p><label for = "dragon"> Dragon Professional </label>
 				<input type = "checkbox" id = "dragon" name = "q3" value = "dragon"></p>
-		
+			<hr/>
 			<p><label for = "q4"> 4. Which of these catagories is Voice Technology related to?  </label>
 				<select name="q4" id="q4" required="required">
 					<option value = ""> Please Select </option>
@@ -65,7 +65,7 @@
 					<option value = "bio"> Biometrics </option>
 					<option value = "politics"> Politics </option>
 				</select></p>
-				
+			<hr/>	
 			<p> 5. What are some of the benefits of Web Voice Technology? </p>
             		<p><label for = "disable"> Useful for those with disabilities </label>
                 		<input type = "checkbox" id = "disable" name = "q5" value = "disable"></p>
