--- a/quiz.html
+++ b/quiz.html
@@ -44,11 +44,11 @@
 			<hr/>
 			<p> 2. What was the name given to the <em>first software program</em> used in Voice Technology? </p>
 			<p><label for = "q2a"> Alexa </label>
-				<input type = "radio" id = "q2a" name = "q2" value = "alexa" required = "required"></p>
+				<input type = "radio" id = "q2a" name = "q2" value = "alexa"</p>
 			<p><label for = "q2b"> Siri </label>
-				<input type = "radio" id = "q2b" name = "q2" value = "siri" required = "required"></p>
+				<input type = "radio" id = "q2b" name = "q2" value = "siri"</p>
 			<p><label for = "q2c"> Cortana </label>
-				<input type = "radio" id = "q2c" name = "q2" value = "cortana" required = "required"></p>
+				<input type = "radio" id = "q2c" name = "q2" value = "cortana"</p>
 			<p><label for = "q2d"> Audrey </label>
 				<input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/></p>
 			<hr/>
