--- a/quiz.html
+++ b/quiz.html
@@ -19,7 +19,7 @@
 		</nav>
 	</header>
 	<form method = "post" action = "https://mercury.swin.edu.au/it000000/formtest.php">
-		<fieldset>
+		<fieldset class="bigsec">
 			<legend class="sections"> Please enter your full name and student ID </legend>
 			<div id="namesec">
 			<p><label for = "fname">First:</label>
@@ -36,7 +36,7 @@
 
 		</fieldset>
 		
-		<fieldset>
+		<fieldset class="bigsec">
 			<legend class="sections"> Read through our topic page if you haven't already, then answer the following questions. Good Luck! </legend>
 			
 			<section class="quiz">
