--- a/quiz.html
+++ b/quiz.html
@@ -22,13 +22,13 @@
 		<fieldset class="bigsec">
 			<legend class="sections"> Please enter your full name and student ID </legend>
 			<div id="namesec">
-			<p><label for = "fname">First:</label>
+			<p class="mulq"><label for = "fname">First:</label>
 			<input type = "text" id = "fname" name = "fname" maxlength = "30" pattern = "^[a-zA-Z]+$" required = "required"></p>
 
-			<p><label for = "lname">Last:</label>
+			<p class="mulq"><label for = "lname">Last:</label>
 			<input type = "text" id = "lname" name = "lname" maxlength = "30" pattern = "^[a-zA-Z]+$" required = "required"></p>
 
-			<p><label for = "studentid">Student ID:</label>
+			<p class="mulq"><label for = "studentid">Student ID:</label>
 
 			<input type = "text" id = "studentid" name = "studentid" required = "required" size="10" pattern="\d{7,10}"></p> 
 			</div>
@@ -47,15 +47,15 @@
 			<section class="quiz">
 			<p class="mq"> 2. What was the name given to the <em>first software program</em> used in Voice Technology? </p>
 			<div class="disp">
-			<p><input type = "radio" id = "q2a" name = "q2" value = "alexa"
+			<p class="mulq"><input type = "radio" id = "q2a" name = "q2" value = "alexa"
 				<label for = "q2a"> Alexa </label></p>
-			<p><input type = "radio" id = "q2b" name = "q2" value = "siri"
+			<p class="mulq"><input type = "radio" id = "q2b" name = "q2" value = "siri"
 				  <label for = "q2b"> Siri </label>
 				</p>
-			<p><input type = "radio" id = "q2c" name = "q2" value = "cortana"
+			<p v><input type = "radio" id = "q2c" name = "q2" value = "cortana"
 				  <label for = "q2c"> Cortana </label>
 				</p>
-			<p><input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/>
+			<p class="mulq"><input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/>
 				<label for = "q2d"> Audrey </label>
 				</p>
 			</div>
@@ -64,16 +64,16 @@
 			<section class="quiz">
 			<p class="mq"> 3. Which of the following are real-world examples of Voice Technology.</p>
 			<div class="disp">
-			<p><input type = "checkbox" id = "applesiri" name = "q3" value = "applesiri">
+			<p class="mulq"><input type = "checkbox" id = "applesiri" name = "q3" value = "applesiri">
 				<label for = "applesiri"> Apple Siri </label>
 				</p>
-			<p><input type = "checkbox" id = "amazon" name = "q3" value = "amazon">
+			<p class="mulq"><input type = "checkbox" id = "amazon" name = "q3" value = "amazon">
 				<label for = "amazon"> Amazon Alexa </label>
 				</p>
-			<p><input type = "checkbox" id = "google" name = "q3" value = "google">
+			<p class="mulq"><input type = "checkbox" id = "google" name = "q3" value = "google">
 				<label for = "google"> Google Assistant </label>
 				</p>
-			<p><input type = "checkbox" id = "dragon" name = "q3" value = "dragon">
+			<p class="mulq"><input type = "checkbox" id = "dragon" name = "q3" value = "dragon">
 				<label for = "dragon"> Dragon Professional </label>
 				</p>
 			</div>
@@ -95,16 +95,16 @@
 			
 			<p class="mq"> 5. What are some of the benefits of Web Voice Technology? </p>
             		<div class="disp">
-			<p><input type = "checkbox" id = "disable" name = "q5" value = "disable">
+			<p class="mulq"><input type = "checkbox" id = "disable" name = "q5" value = "disable">
 				<label for = "disable"> Useful for those with disabilities </label>
                 		</p>
-            		<p><input type = "checkbox" id = "interconnectedness" name = "q5" value = "interconnectedness">
+            		<p class="mulq"><input type = "checkbox" id = "interconnectedness" name = "q5" value = "interconnectedness">
 				<label for = "interconnectedness"> Can be connected among other devices for productivity </label>
                 		</p>
-           		 <p><input type = "checkbox" id = "convennient" name = "q5" value = "convenient">
+           		 <p class="mulq"><input type = "checkbox" id = "convennient" name = "q5" value = "convenient">
 				 <label for = "convennient"> Is very convenient for certain tasks(writing,etc) </label>
                 		</p>
-            		<p><input type = "checkbox" id = "privacy" name = "q5" value = "privacy">
+            		<p class="mulq"><input type = "checkbox" id = "privacy" name = "q5" value = "privacy">
 				<label for = "privacy"> Provides the best privacy, firewall that prevents malicious attack on files  </label>
                 		</p>
 			</div>
