--- a/quiz.html
+++ b/quiz.html
@@ -39,29 +39,29 @@
 		<fieldset class="bigsec">
 			<legend class="sections"> Read through our topic page if you haven't already, then answer the following questions. Good Luck! </legend>
 			
-			<section class="quiz">
+			<div class="quiz">
 			<p class="shortq"><label for = "q1"> 1. What is another name for <strong>Voice Technology</strong>? </label><br/>
 			<input type = "text" id = "q1" name = "q1" required = "required" pattern="^[a-zA-Z]+$" maxlength="30"></p>
-			</section>
+			</div>
 			
-			<section class="quiz">
+			<div class="quiz">
 			<p class="mq"> 2. What was the name given to the <em>first software program</em> used in Voice Technology? </p>
 			<div class="disp">
-			<p class="mulq"><input type = "radio" id = "q2a" name = "q2" value = "alexa"
+			<p class="mulq"><input type = "radio" id = "q2a" name = "q2" value = "alexa">
 				<label for = "q2a"> Alexa </label></p>
-			<p class="mulq"><input type = "radio" id = "q2b" name = "q2" value = "siri"
+			<p class="mulq"><input type = "radio" id = "q2b" name = "q2" value = "siri">
 				  <label for = "q2b"> Siri </label>
 				</p>
-			<p v><input type = "radio" id = "q2c" name = "q2" value = "cortana"
+			<p v><input type = "radio" id = "q2c" name = "q2" value = "cortana">
 				  <label for = "q2c"> Cortana </label>
 				</p>
 			<p class="mulq"><input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/>
 				<label for = "q2d"> Audrey </label>
 				</p>
 			</div>
-			</section>
+			</div>
 			
-			<section class="quiz">
+			<div class="quiz">
 			<p class="mq"> 3. Which of the following are real-world examples of Voice Technology.</p>
 			<div class="disp">
 			<p class="mulq"><input type = "checkbox" id = "applesiri" name = "q3" value = "applesiri">
@@ -77,9 +77,9 @@
 				<label for = "dragon"> Dragon Professional </label>
 				</p>
 			</div>
-			</section>
+			</div>
 			
-			<section class="quiz">
+			<div class="quiz">
 			<p class="shortq"><label for = "q4"> 4. Which of these catagories is Voice Technology related to?  </label><br/>
 				
 				<select name="q4" id="q4" required="required">
@@ -89,9 +89,9 @@
 					<option value = "politics"> Politics </option>
 				</select></p>
 			
-			</section>
+			</div>
 			
-			<section class="quiz">
+			<div class="quiz">
 			
 			<p class="mq"> 5. What are some of the benefits of Web Voice Technology? </p>
             		<div class="disp">
@@ -108,7 +108,7 @@
 				<label for = "privacy"> Provides the best privacy, firewall that prevents malicious attack on files  </label>
                 		</p>
 			</div>
-			</section>
+			</div>
 		</fieldset>
 		
 		<p id="finbutt"><input type = "submit" value = "Finish Quiz!"></p>
