--- a/quiz.html
+++ b/quiz.html
@@ -52,7 +52,7 @@
 			<p class="mulq"><input type = "radio" id = "q2b" name = "q2" value = "siri">
 				  <label for = "q2b"> Siri </label>
 				</p>
-			<p v><input type = "radio" id = "q2c" name = "q2" value = "cortana">
+			<p class="mulq"><input type = "radio" id = "q2c" name = "q2" value = "cortana">
 				  <label for = "q2c"> Cortana </label>
 				</p>
 			<p class="mulq"><input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/>
