--- a/quiz.html
+++ b/quiz.html
@@ -47,17 +47,7 @@
 			<div class="quiz">
 			<p class="mq"> 2. What was the name given to the <em>first software program</em> used in Voice Technology? </p>
 			<div class="disp">
-			<p class="mulq"><input type = "radio" id = "q2a" name = "q2" value = "alexa">
-				<label for = "q2a"> Alexa </label></p>
-			<p class="mulq"><input type = "radio" id = "q2b" name = "q2" value = "siri">
-				  <label for = "q2b"> Siri </label>
-				</p>
-			<p class="mulq"><input type = "radio" id = "q2c" name = "q2" value = "cortana">
-				  <label for = "q2c"> Cortana </label>
-				</p>
-			<p class="mulq"><input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/>
-				<label for = "q2d"> Audrey </label>
-				</p>
+			<p class="mulq">
 			</div>
 			</div>
 			
@@ -94,19 +84,8 @@
 			<div class="quiz">
 			
 			<p class="mq"> 5. What are some of the benefits of Web Voice Technology? </p>
-            		<div class="disp">
-			<p class="mulq"><input type = "checkbox" id = "disable" name = "q5" value = "disable">
-				<label for = "disable"> Useful for those with disabilities </label>
-                		</p>
-            		<p class="mulq"><input type = "checkbox" id = "interconnectedness" name = "q5" value = "interconnectedness">
-				<label for = "interconnectedness"> Can be connected among other devices for productivity </label>
-                		</p>
-           		 <p class="mulq"><input type = "checkbox" id = "convennient" name = "q5" value = "convenient">
-				 <label for = "convennient"> Is very convenient for certain tasks(writing,etc) </label>
-                		</p>
-            		<p class="mulq"><input type = "checkbox" id = "privacy" name = "q5" value = "privacy">
-				<label for = "privacy"> Provides the best privacy, firewall that prevents malicious attack on files  </label>
-                		</p>
+            		<div id="q5">
+				<p><textarea placeholder="Answer here" maxlength="50" ></textarea></p>
 			</div>
 			</div>
 		</fieldset>
