--- a/quiz.html
+++ b/quiz.html
@@ -47,7 +47,17 @@
 			<div class="quiz">
 			<p class="mq"> 2. What was the name given to the <em>first software program</em> used in Voice Technology? </p>
 			<div class="disp">
-			<p class="mulq">
+			<p class="mulq"><input type = "radio" id = "q2a" name = "q2" value = "alexa">
+				<label for = "q2a"> Alexa </label></p>
+			<p class="mulq"><input type = "radio" id = "q2b" name = "q2" value = "siri">
+				  <label for = "q2b"> Siri </label>
+				</p>
+			<p class="mulq"><input type = "radio" id = "q2c" name = "q2" value = "cortana">
+				  <label for = "q2c"> Cortana </label>
+				</p>
+			<p class="mulq"><input type = "radio"  id = "q2d" name = "q2" value = "audrey" required = "required"/>
+				<label for = "q2d"> Audrey </label>
+				</p>
 			</div>
 			</div>
 			
