--- a/quiz.html
+++ b/quiz.html
@@ -95,7 +95,7 @@
 			
 			<p class="mq"> 5. What are some of the benefits of Web Voice Technology? </p>
             		<div id="q5">
-				<p><textarea placeholder="Answer here" maxlength="50" ></textarea></p>
+				<p><textarea placeholder="Answer here" maxlength="50" rows="10" cols="50" ></textarea></p>
 			</div>
 			</div>
 		</fieldset>
