--- a/topic.html
+++ b/topic.html
@@ -55,20 +55,28 @@
                     <li>Customer Experience</li>
                 </ul>
                 <a href="#"><img src="imgs/vt3.png" alt="voice technology" width="700"></a>
-                <h3> Benefits : </h3>
-                <ul>
-                    <li>useful for those with disabilities (especially for the eyes and limbs)</li>
-                    <li>can be connected to other devices and smart appliances, whiche helps to complete tasks more easily and efficiently</li>
-                    <li>conveniency</li>
-                    <li>can remember previous interactions and become more suitable to the user the longer the usage is</li>
-                </ul>
-                <h3>Disadvantages:</h3>
-                <ul>
-                    <li>expensive, since they usually come as a function of smart devices</li>
-                    <li>inaccuracy in recognising voice</li>
-                    <li>many tasks cannot be done through voice technology due to the complexity of the programming involved</li>
-                    <li>breach of privacy</li>
-                </ul>
+                <table>
+		<tr>
+			<th>Advantages</th>
+			<th>Disadvantages</th>
+		</tr>
+		<tr>
+			<td>Useful for those with disabilities (especially for the eyes and limbs)</td>
+			<td>Expensive, since they usually come as a function of smart devices</td>
+		</tr>
+		<tr>
+			<td>Can be connected to other devices and smart appliances, whiche helps to complete tasks more easily and efficiently</td>
+			<td>Inaccuracy in recognising voice</td>
+		</tr>
+		<tr>
+			<td>Conveniency</td>
+			<td>Many tasks cannot be done through voice technology due to the complexity of the programming involved</td>
+		</tr>
+		<tr>
+			<td>Can remember previous interactions and become more suitable to the user the longer the usage is</td>
+			<td>Breach of privacy</td>
+		</tr>
+		</table>
             </div>
 
             <div class="content_2">
