--- a/topic.html
+++ b/topic.html
@@ -56,27 +56,31 @@
                 </ul>
                 <a href="#"><img src="imgs/vt3.png" alt="voice technology" width="700"></a>
                 <table>
-		<tr>
-			<th>Advantages</th>
-			<th>Disadvantages</th>
-		</tr>
-		<tr>
-			<td>Useful for those with disabilities (especially for the eyes and limbs)</td>
-			<td>Expensive, since they usually come as a function of smart devices</td>
-		</tr>
-		<tr>
-			<td>Can be connected to other devices and smart appliances, whiche helps to complete tasks more easily and efficiently</td>
-			<td>Inaccuracy in recognising voice</td>
-		</tr>
-		<tr>
-			<td>Conveniency</td>
-			<td>Many tasks cannot be done through voice technology due to the complexity of the programming involved</td>
-		</tr>
-		<tr>
-			<td>Can remember previous interactions and become more suitable to the user the longer the usage is</td>
-			<td>Breach of privacy</td>
-		</tr>
-		</table>
+                    <thead>
+                    <tr>
+                        <th>Advantages</th>
+                        <th>Disadvantages</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr>
+                        <td>Useful for those with disabilities (especially for the eyes and limbs)</td>
+                        <td>Expensive, since they usually come as a function of smart devices</td>
+                    </tr>
+                    <tr class="special">
+                        <td>Can be connected to other devices and smart appliances, which helps to complete tasks more easily and efficiently</td>
+                        <td>Inaccuracy in recognising voice</td>
+                    </tr>
+                    <tr>
+                        <td>Conveniency</td>
+                        <td>Many tasks cannot be done through voice technology due to the complexity of the programming involved</td>
+                    </tr>
+                    <tr class="special">
+                        <td>Can remember previous interactions and become more suitable to the user the longer the usage is</td>
+                        <td>Breach of privacy</td>
+                    </tr>
+                    </tbody>
+                    </table>
             </div>
 
             <div class="content_2">
