--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         
         <!-- Content Section s-->
         <div class="container">
-                <img id="index_img" src="/imgs/vt1.jpg" alt="voice technologies image 1">
+                <img id="index_img" src="imgs/vt1.jpg" alt="voice technologies image 1">
             <div class="content">
                 <p>
                     There is a vast difference in today's world of technologies compared to a decade ago. 
