fixed nav link and added heading
Nav link was bringing up the local C drive when we clicked on the words Voice Technology, now it just takes us to the homepage like any old website.
Also added a heading in index.html as we need one for the assignment.

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <!-- Navigation Section -->
         <nav class="navbar">
             <div class="navbar__container">
-              <a href="/" id="navbar__logo">Voice Technology</a>
+              <a href="index.html" id="navbar__logo">Voice Technology</a>
               <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span> <span class="bar"></span>
                 <span class="bar"></span>
@@ -40,6 +40,7 @@
         <div class="container">
                 <img id="index_img" src="imgs/vt1.jpg" alt="voice technologies image 1">
             <div class="content">
+				<h1> Voice Technology Assignment </h1>
                 <p>
                     There is a vast difference in today's world of technologies compared to a decade ago. 
                     Adaptations of technology to the human lifestyle has come a long way, specially with <strong>Voice Technology</strong>, 
