--- a/topic.html
+++ b/topic.html
@@ -14,7 +14,7 @@
         <!-- Navigation Section -->
         <nav class="navbar">
             <div class="navbar__container">
-              <a href="/" id="navbar__logo">Voice Technology</a>
+              <a href="index.html" id="navbar__logo">Voice Technology</a>
               <div class="navbar__toggle" id="mobile-menu">
                 <span class="bar"></span> <span class="bar"></span>
                 <span class="bar"></span>
