--- a/quiz.html
+++ b/quiz.html
@@ -110,7 +110,7 @@
 					  <input type = "checkbox" id = "dragon" name = "q3" value = "dragon">
 				        <label for = "dragon"> Dragon Professional </label>
 					  </p>
-				    </div?    
+			    </div>    
                     </div>
 
                     <div id="quiz_sec">
