--- a/quiz.html
+++ b/quiz.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <title>Voice Technology | Quiz </title>
@@ -60,7 +60,7 @@
                 <fieldset>
                     <legend class="f_section"> Read through our topic page if you haven't already, then answer the following questions. Good Luck! </legend>
 
-                    <div id="quiz_sec">
+                    <div class="quiz_sec">
                         <p>
                             <label for = "q1"> 1. What is another name for <strong>Voice Technology</strong>? </label>
                             <br/>
@@ -68,7 +68,7 @@
                         </p>
                     </div>
 
-                    <div id="quiz_sec">
+                    <div class="quiz_sec>
                         <p>
                             2. What was the name given to the <em>first software program</em> used in Voice Technology?
                         </p>
@@ -89,7 +89,7 @@
                            
                     </div>
 
-                    <div id="quiz_sec">
+                    <div class="quiz_sec">
                         <p> 
                             3. Which of the following are real-world examples of Voice Technology.
                         </p>
@@ -113,7 +113,7 @@
 			    </div>    
                     </div>
 
-                    <div id="quiz_sec">
+                    <div class="quiz_sec>
                         <p>
                             <label for = "q4">4. Which of these catagories is Voice Technology related to?</label>
                             <br/>
@@ -126,7 +126,7 @@
                         </p>
                     </div>
 
-                    <div id="quiz_sec">
+                    <div class="quiz_sec>
                         <p>
                             5. What are some of the benefits of Web Voice Technology?
                         </p>
@@ -161,13 +161,15 @@
         <!-- Footer Section -->
         <footer class="mainfooter">
             <div class="f_container">
-                <h3> Swinburne University | Assignment 1 &copy </h3>
-                <li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
+                <h3> Swinburne University | Assignment 1 &amp;copy </h3>
+                <ul>
+		<li><a href="mailto:joycmena@gmail.com"> Joy </a></li>
                 <li><a href="mailto:nelsonhain@gmail.com"> Nelson </a></li>
                 <li><a href="mailto:augiaminh14@gmail.com"> Minh </a></li>
                 <li><a href="mailto:thinhd464@gmail.com"> Tom </a></li>
                 <li><a href="mailto:uzmanshafifassy@gmail.com"> Uzi </a></li>
-            </div>
+		</ul>
+	</div>
         </footer>
 
     </body>
