--- a/quiz.html
+++ b/quiz.html
@@ -68,7 +68,7 @@
                         </p>
                     </div>
 
-                    <div class="quiz_sec>
+                    <div class="quiz_sec">
                         <p>
                             2. What was the name given to the <em>first software program</em> used in Voice Technology?
                         </p>
@@ -113,7 +113,7 @@
 			    </div>    
                     </div>
 
-                    <div class="quiz_sec>
+                    <div class="quiz_sec">
                         <p>
                             <label for = "q4">4. Which of these catagories is Voice Technology related to?</label>
                             <br/>
@@ -126,7 +126,7 @@
                         </p>
                     </div>
 
-                    <div class="quiz_sec>
+                    <div class="quiz_sec">
                         <p>
                             5. What are some of the benefits of Web Voice Technology?
                         </p>
