--- a/topic.html
+++ b/topic.html
@@ -108,30 +108,16 @@
 		            It's a competitive and open market. There is no central body which governs voice recognition technology. However, 
                     there are prominent developers and companies that contribute tremendously in the field:
 	            </p>
-                
-                <ol>
-                    <li>Nuance Communication </li>
-                    <ul>
-                        <li>
-                            uses AI and voice technologyto support multiple industries i.e. healthcare, telecom, financial services, etc.
-                        </li>
-                    </ul>
-                    <li>Google LLC
-                        <ul>
-                            <li>home automation using voice technology via <em>Google Assistant</em></li>
-                        </ul>
-                    </li>
-                    <li>Amazon
-                        <ul>
-                            <li>virtual assistant using speech recognition <em>Alexa</em> to support daily life activities</li>
-                        </ul>
-                    </li>
-                    <li>Apple
-                        <ul>
-                            <li><em>Siri</em> helps people navigate around the phone</li>
-                        </ul>
-                    </li>
-                </ol>
+                <dl>
+                    <dt>Nuance Communication</dt>
+                        <dd>uses AI and voice technology to support multiple industries i.e. healthcare, telecom, financial services, etc.</dd>
+                    <dt>Google LLC</dt>
+                        <dd>home automation using voice technology via <em>Google Assistant</em></dd>
+                    <dt>Amazon</dt>
+                        <dd>virtual assistantusing speech recognition <em>Alexa</em> to support daily life activities</dd>
+                    <dt>Apple</dt>
+                        <dd><em>Siri</em> helps people navigate around the phone</dd>
+                </dl>
 
                 <ul>
                     <li>Examples of voice technology and prominent factors in the industry:
